--- a/demo/src/main/resources/com/assignment/textConverter.fxml
+++ b/demo/src/main/resources/com/assignment/textConverter.fxml
@@ -2,50 +2,54 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.2959866220735786" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.ApplicationController">
+<SplitPane dividerPositions="0.2959866220735786" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.TextConverterController">
     <items>
         <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="250.0" SplitPane.resizableWithParent="false">
             <children>
                 <VBox prefHeight="600.0" prefWidth="250.0">
                     <children>
-                        <Button mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="75.0" prefWidth="250.0" text="Hierachy of Wu Kingdom">
+                        <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="75.0" prefWidth="250.0" text="Hierachy of Wu Kingdom">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="75.0" prefWidth="250.0" text="Soldier Arrangement">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="75.0" prefWidth="250.0" text="Soldier Arrangement">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button alignment="CENTER" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="75.0" prefWidth="250.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER">
+                        <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="75.0" prefWidth="250.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="75.0" prefWidth="250.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="75.0" prefWidth="250.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="75.0" prefWidth="250.0" text="Food Harvesting">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="75.0" prefWidth="250.0" text="Food Harvesting">
                             <font>
                                 <Font size="16.0" />
                             </font></Button>
-                        <Button defaultButton="true" layoutX="10.0" layoutY="286.0" mnemonicParsing="false"
-                                onAction="#switchToTextConverter" prefHeight="75.0" prefWidth="250.0" text="Text Converter">
+                        <Button defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="75.0" prefWidth="250.0" text="Text Converter">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="75.0" prefWidth="250.0" text="Red Cliff on Fire">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="75.0" prefWidth="250.0" text="Red Cliff on Fire">
                             <font>
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="75.0" prefWidth="250.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="75.0" prefWidth="250.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER">
                             <font>
                                 <Font size="16.0" />
                             </font>
@@ -53,7 +57,7 @@
                     </children>
                 </VBox>
             </children></AnchorPane>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="664.0" prefWidth="819.0">
             <children>
                 <Label fx:id="title" prefHeight="45.0" prefWidth="742.0" text="Text Converter" AnchorPane.leftAnchor="0.0">
                     <font>
@@ -63,6 +67,48 @@
                         <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
                     </padding>
                 </Label>
+            <Label fx:id="inputLabel" alignment="CENTER_RIGHT" layoutX="217.0" layoutY="79.0" prefHeight="25.0" prefWidth="214.0" text="Enter text to encrypt/decrypt:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="65.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="inputTextArea" layoutX="232.0" layoutY="65.0" prefHeight="200.0" prefWidth="484.0" promptText="Enter your text here." wrapText="true" AnchorPane.leftAnchor="232.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextArea>
+            <Label fx:id="shiftValueLabel" alignment="CENTER_RIGHT" layoutX="20.0" layoutY="283.0" prefHeight="25.0" prefWidth="214.0" text="Shift value:  " AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="283.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="shiftValueTextField" layoutX="232.0" layoutY="270.0" prefHeight="25.0" prefWidth="484.0" promptText="1-25" AnchorPane.leftAnchor="232.0" AnchorPane.topAnchor="280.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextField>
+            <ChoiceBox fx:id="operationChoiceBox" layoutX="234.0" layoutY="337.0" prefHeight="25.0" prefWidth="158.0" AnchorPane.topAnchor="330.0" />
+            <Label fx:id="operationChoiceLabel" alignment="CENTER_RIGHT" layoutX="20.0" layoutY="330.0" prefHeight="25.0" prefWidth="214.0" text="Operation choice: " AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="330.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button fx:id="convertButton" layoutX="597.0" layoutY="329.0" mnemonicParsing="false" onAction="#convert" prefHeight="52.0" prefWidth="119.0" text="Convert">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <RadioButton fx:id="securedModeRButton" layoutX="44.0" layoutY="370.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="25.0" prefWidth="214.0" text="Secured:" AnchorPane.leftAnchor="44.0" AnchorPane.topAnchor="370.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </RadioButton>
+            <Separator layoutX="-4.0" layoutY="395.0" prefHeight="25.0" prefWidth="742.0" />
+            <TextArea fx:id="convertedTextCopiableLabel" editable="false" layoutX="17.0" layoutY="419.0" opacity="0.5" prefHeight="172.0" prefWidth="708.0" promptText="Converted text." stylesheets="@style.css" wrapText="true" AnchorPane.leftAnchor="20.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </TextArea>
             </children></AnchorPane>
     </items>
 </SplitPane>
