--- a/demo/src/main/resources/com/assignment/borrowingArrow.fxml
+++ b/demo/src/main/resources/com/assignment/borrowingArrow.fxml
@@ -15,39 +15,39 @@
             <children>
                 <VBox prefHeight="600.0" prefWidth="250.0">
                     <children>
-                        <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="75.0" prefWidth="250.0" text="Hierachy of Wu Kingdom">
+                        <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="75.0" prefWidth="250.0" text="Hierachy of Wu Kingdom" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font></Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="75.0" prefWidth="250.0" text="Soldier Arrangement">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="75.0" prefWidth="250.0" text="Soldier Arrangement" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font></Button>
-                        <Button alignment="CENTER" defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="75.0" prefWidth="250.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER">
+                        <Button alignment="CENTER" defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="75.0" prefWidth="250.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font></Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="75.0" prefWidth="250.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="75.0" prefWidth="250.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font></Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="75.0" prefWidth="250.0" text="Food Harvesting">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="75.0" prefWidth="250.0" text="Food Harvesting" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font></Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="75.0" prefWidth="250.0" text="Text Converter">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="75.0" prefWidth="250.0" text="Text Converter" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font>
                         </Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="75.0" prefWidth="250.0" text="Red Cliff on Fire">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="75.0" prefWidth="250.0" text="Red Cliff on Fire" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font>
                         </Button>
-                        <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="75.0" prefWidth="250.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER">
+                        <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="75.0" prefWidth="250.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER" textFill="#46252a">
                             <font>
-                                <Font size="16.0" />
+                                <Font name="System Bold" size="16.0" />
                             </font>
                         </Button>
                     </children>
@@ -55,58 +55,76 @@
             </children></AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
-                <Label fx:id="title" prefHeight="45.0" prefWidth="742.0" text="Borrowing Arrow with Straw Boats" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+                <Label fx:id="title" prefHeight="45.0" prefWidth="742.0" text="Borrowing Arrow with Straw Boats" textFill="#46252a" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                     <font>
-                        <Font size="30.0" />
+                        <Font name="System Bold" size="30.0" />
                     </font>
                 </Label>
-            <Label layoutY="65.0" prefHeight="65.0" prefWidth="724.0" text="Enter number of Enter number of straw men for the directions. Number of straw men in one direction must be 0-100." wrapText="true" AnchorPane.leftAnchor="10.0">
+            <Label layoutY="65.0" prefHeight="65.0" prefWidth="724.0" text="Enter number of Enter number of straw men for the directions. Number of straw men in one direction must be 0-100." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="frontTextField" layoutX="85.0" layoutY="130.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="130.0" />
-            <Label fx:id="frontLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="130.0" prefHeight="25.0" prefWidth="50.0" text="Front: " AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="130.0">
+            <TextField fx:id="frontTextField" layoutX="85.0" layoutY="130.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="130.0">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="16.0" />
+               </font></TextField>
+            <Label fx:id="frontLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="134.0" prefHeight="25.0" prefWidth="50.0" text="Front: " textFill="#46252a" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="134.0">
+               <font>
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="leftLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="160.0" prefHeight="25.0" prefWidth="50.0" text="Left: " AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="160.0">
+            <Label fx:id="leftLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="184.0" prefHeight="25.0" prefWidth="50.0" text="Left: " textFill="#46252a" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="184.0">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="rightLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="190.0" prefHeight="25.0" prefWidth="50.0" text="Right: " AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="190.0">
+            <Label fx:id="rightLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="235.0" prefHeight="25.0" prefWidth="50.0" text="Right: " textFill="#46252a" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="235.0">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="backLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="220.0" prefHeight="25.0" prefWidth="50.0" text="Back: " AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0">
+            <Label fx:id="backLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="284.0" prefHeight="25.0" prefWidth="50.0" text="Back: " textFill="#46252a" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="284.0">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="leftTextField" layoutX="85.0" layoutY="160.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="160.0" />
-            <TextField fx:id="backTextField" layoutX="85.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="220.0" />
-            <TextField fx:id="rightTextField" layoutX="85.0" layoutY="190.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="190.0" />
-            <Button fx:id="submitButton" layoutX="333.0" layoutY="539.0" mnemonicParsing="false" onAction="#submit" prefHeight="36.0" prefWidth="77.0" text="Submit" AnchorPane.topAnchor="539.0" />
-            <Label fx:id="borrowingArrowLabel" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="376.0" prefHeight="141.0" prefWidth="698.0" text="Boat direction: &#10;Arrow received:&#10;Total:" textFill="#006284" wrapText="true" AnchorPane.leftAnchor="10.0">
+            <TextField fx:id="leftTextField" layoutX="85.0" layoutY="180.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="180.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="System Bold" size="16.0" />
+               </font></TextField>
+            <TextField fx:id="backTextField" layoutX="85.0" layoutY="280.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="280.0">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font></TextField>
+            <TextField fx:id="rightTextField" layoutX="85.0" layoutY="230.0" prefHeight="25.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="230.0">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font></TextField>
+            <Button fx:id="submitButton" layoutX="607.0" layoutY="514.0" mnemonicParsing="false" onAction="#submit" prefHeight="55.0" prefWidth="104.0" text="Submit" textFill="#46252a" AnchorPane.topAnchor="514.0">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font></Button>
+            <Label fx:id="borrowingArrowLabel" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="444.0" prefHeight="89.0" prefWidth="587.0" text="Boat direction: &#10;Arrow received:&#10;Total:" textFill="#006284" wrapText="true" AnchorPane.leftAnchor="10.0">
+               <font>
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="arrowLabel" alignment="CENTER_RIGHT" layoutX="30.0" layoutY="319.0" prefHeight="25.0" prefWidth="50.0" text="Arrow: " AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="319.0">
+            <Label fx:id="arrowLabel" alignment="CENTER_RIGHT" layoutX="23.0" layoutY="394.0" prefHeight="25.0" prefWidth="59.0" text="Arrow: " AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="394.0">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="arrowTextField" layoutX="80.0" layoutY="319.0" prefHeight="25.0" prefWidth="409.0" promptText="2000,1600,1500,..." AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="319.0" />
-            <Label layoutX="19.0" layoutY="254.0" prefHeight="65.0" prefWidth="724.0" text="Enter the number of arrows shot in each wave. The number of arrows shot should be in decreasing order. Please enter the arrows in the format: 2000,1500,1000,..." wrapText="true" AnchorPane.leftAnchor="10.0">
+            <TextField fx:id="arrowTextField" layoutX="85.0" layoutY="390.0" prefHeight="25.0" prefWidth="409.0" promptText="2000,1600,1500,..." AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="390.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="System Bold" size="16.0" />
+               </font></TextField>
+            <Label layoutX="10.0" layoutY="326.0" prefHeight="65.0" prefWidth="724.0" text="Enter the number of arrows shot in each wave. The number of arrows shot should be in decreasing order. Please enter the arrows in the format: 2000,1500,1000,..." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0">
+               <font>
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Separator layoutY="358.0" prefHeight="17.0" prefWidth="742.0" />
+            <Separator layoutX="-2.0" layoutY="427.0" prefHeight="17.0" prefWidth="742.0" />
             </children></AnchorPane>
     </items>
 </SplitPane>
