--- a/demo/src/main/resources/com/assignment/style.css
+++ b/demo/src/main/resources/com/assignment/style.css
@@ -1,4 +1,13 @@
 .convertedTextCopiableLabel, .convertedTextCopiableLabel:focused {
     -fx-background-color: transparent ;
     -fx-background-insets: 0px ;
+    -fx-font-weight: bold;
+}
+
+.root {
+    -fx-background-image: url("background.jpg");
+    -fx-background-repeat: stretch;
+    -fx-background-size: cover;
+    -fx-background-position: center center;
+    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
 }
