--- a/demo/src/main/resources/com/assignment/style.css
+++ b/demo/src/main/resources/com/assignment/style.css
@@ -11,3 +11,17 @@
     -fx-background-position: center center;
     -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
 }
+
+.button {
+    -fx-background-color: rgba(139, 69, 19, 0.2);
+    -fx-border-color: #46252a;
+    -fx-border-width: 1px;
+    -fx-border-style: solid;
+    -fx-border-radius: 10px;
+    -fx-effect: dropshadow(rgba(0, 0, 0, 0.2));
+    -fx-transition: -fx-effect 0.3s ease;
+}
+
+.button:hover {
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 4, 0, 4, 8);
+}
