--- a/demo/src/main/resources/com/assignment/style.css
+++ b/demo/src/main/resources/com/assignment/style.css
@@ -1,11 +1,11 @@
 .convertedTextCopiableLabel, .convertedTextCopiableLabel:focused {
-    -fx-background-color: transparent ;
-    -fx-background-insets: 0px ;
+    -fx-background-color: transparent;
+    -fx-background-insets: 0px;
     -fx-font-weight: bold;
 }
 
 .root {
-    -fx-background-image: url("background.jpg");
+    -fx-background-image: url("bg5.jpg");
     -fx-background-repeat: stretch;
     -fx-background-size: cover;
     -fx-background-position: center center;
@@ -13,15 +13,15 @@
 }
 
 .button {
-    -fx-background-color: rgba(139, 69, 19, 0.2);
+    -fx-background-color: rgba(255, 255, 255, 0.1);
+    -fx-background-radius: 10px;
     -fx-border-color: #46252a;
     -fx-border-width: 1px;
     -fx-border-style: solid;
     -fx-border-radius: 10px;
-    -fx-effect: dropshadow(rgba(0, 0, 0, 0.2));
     -fx-transition: -fx-effect 0.3s ease;
 }
 
 .button:hover {
-  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 4, 0, 4, 8);
+  -fx-effect: dropshadow(gaussian, rgba(7, 0, 8, 0.3), 0, 1, 2, 5);
 }
